[package]
name = "bevy_core_pipeline"
version = "0.16.1"
edition = "2024"
authors = [
  "Bevy Contributors <bevyengine@gmail.com>",
  "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides a core render pipeline for Bevy Engine."
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
dds = ["bevy_render/dds", "bevy_image/dds"]
trace = []
webgl = []
webgpu = []
tonemapping_luts = ["bevy_render/ktx2", "bevy_image/ktx2", "bevy_image/zstd"]
smaa_luts = ["bevy_render/ktx2", "bevy_image/ktx2", "bevy_image/zstd"]

[dependencies]
# bevy
bevy_app = { version = "0.16.1" }
bevy_asset = { version = "0.16.1" }
bevy_color = { version = "0.16.2" }
bevy_derive = { version = "0.16.1" }
bevy_diagnostic = { version = "0.16.1" }
bevy_ecs = { version = "0.16.1" }
bevy_image = { version = "0.16.1" }
bevy_reflect = { version = "0.16.1" }
bevy_render = { version = "0.16.1" }
bevy_transform = { version = "0.16.1" }
bevy_math = { version = "0.16.1" }
bevy_utils = { version = "0.16.1" }
bevy_window = { version = "0.16.1" }
bevy_platform = { version = "0.16.1", default-features = false, features = [
  "std",
  "serialize",
] }

serde = { version = "1", features = ["derive"] }
bitflags = "2.3"
radsort = "0.1"
nonmax = "0.5"
smallvec = "1"
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
bytemuck = { version = "1" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
