[package]
name = "bevy_ui"
version = "0.15.3"
edition = "2021"
description = "A custom ECS-driven UI framework built specifically for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_a11y = { version = "0.15.3" }
bevy_app = { version = "0.15.3" }
bevy_asset = { version = "0.15.3" }
bevy_color = { version = "0.15.4" }
bevy_core_pipeline = { version = "0.15.3" }
bevy_derive = { version = "0.15.3" }
bevy_ecs = { version = "0.15.3" }
bevy_hierarchy = { version = "0.15.3" }
bevy_image = { version = "0.15.3" }
bevy_input = { version = "0.15.3" }
bevy_math = { version = "0.15.3" }
bevy_reflect = { version = "0.15.3", features = ["bevy"] }
bevy_render = { version = "0.15.3" }
bevy_sprite = { version = "0.15.3" }
bevy_text = { version = "0.15.3" }
bevy_picking = { version = "0.15.3", optional = true }
bevy_transform = { version = "0.15.3" }
bevy_window = { version = "0.15.3" }
bevy_utils = { version = "0.15.3" }

# other
taffy = { version = "0.5" }
serde = { version = "1", features = ["derive"], optional = true }
bytemuck = { version = "1.5", features = ["derive"] }
derive_more = { version = "1", default-features = false, features = [
  "error",
  "from",
  "display",
] }
nonmax = "0.5"
smallvec = "1.11"
accesskit = "0.17"

[features]
serialize = ["serde", "smallvec/serde", "bevy_math/serialize"]
bevy_ui_picking_backend = ["bevy_picking"]

# Experimental features
ghost_nodes = []

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
